--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,7 @@
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div class="relative bg-white">
-      <div class="max-w-7xl mx-auto px-4 sm:px-6">
-    </div></div>
-    <div id="app" class="p-6"></div>
+    <div id="app" class="p-6 h-full"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
